--- a/show.html
+++ b/show.html
@@ -27,14 +27,48 @@
 
     <script src="TagMap.js"></script>
     <script type="text/javascript">
-        var tagmap= new TagMap('map', 'info');
-//        tagmap.show('test101');
-        $('#display').on('click', function () {
-                tagmap.show( $('#tags').val() );
-                });
-        $('#clear').on('click', function () {
-                tagmap.clear();
-                });
+    var tagmap = new TagMap({
+        api: "api.php", //PolleAPI
+        content: "content_da",
+        mapDiv: 'map',
+        infoDiv: 'info',
+        baseMaps: {
+            "Historisk atlas": new L.TileLayer('http://tile.historiskatlas.dk/54/{z}/{x}/{y}.jpg'),
+            "OSM": new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),
+            "cloudmade": new L.TileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png')
+        },
+        tagConfig : [
+        {
+            name: "test101",
+            style: {
+                radius: 8,
+                fillColor: "#ffcc47",
+                color: "#ff0000",
+                weight: 5,
+                opacity: 1,
+                fillOpacity: 0.8
+            }
+        },
+        {
+            name: "test102",
+            style: {
+                radius: 8,
+                fillColor: "#cccc47",
+                color: "#ffff00",
+                weight: 5,
+                opacity: 0.5,
+                fillOpacity: 0.3
+            }
+         }
+       ],
+       lat: 55.63405,
+       lng: 12.59938,
+       zoom: 14
+    });
+
+    $('#display').on('click', function () {
+        tagmap.show( $('#tags').val() );
+    });
     </script>
 </body>
 </html>
