--- a/show.html
+++ b/show.html
@@ -40,7 +40,7 @@
         },
         tagConfig : [
         {
-            name: "mwp",
+            name: "default",
             style: {
                 radius: 8,
                 fillColor: "#ffcc47",
@@ -51,7 +51,7 @@
                 }
         },
         {
-            name: "mwp1",
+            name: "mwp",
             style: {
                 radius: 8,
                 fillColor: "#aacc47",
