--- a/edit.html
+++ b/edit.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tagmap edit</title>
-    <meta charset="UTF-8">
+    <title>Tagmap edit</title> <meta charset="UTF-8">
 	<link rel="stylesheet" href="libs/leaflet.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="libs/leaflet.ie.css" /><![endif]-->
 	<link rel="stylesheet" href="leaflet.draw.css" />
@@ -57,12 +56,12 @@
                 <table>
                     <form name="mark" action="#">
                         <tr><td>   filter:</td><td> <div id="divs">
-                                    <button id="edit">s&oslash;g</button> </div>
+                                <button id="edit">s&oslash;g</button> </div>
                                 <button id="clear">Rens kort</button>
                         </td></tr>
              <tr><td>id:</td><td><input type="text" id="id"></td></tr>
              <tr><td>navn:</td><td><input type="text" id="name"></td></tr>
-             <tr><td>tags:</td><td><input type="text" id="tags"> (krævet) </td></tr>
+             <tr><td>tags:</td><td><input type="text" id="tags"> (krævet)</td></tr>
              <tr><td>indhold (da):</td><td> <textarea id="content_da" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
              <tr><td>indhold (en):</td><td> <textarea id="content_en" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
              <tr><td>&nbsp;</td><td><button id="saveButton">Gem</button> <button id="remove">slet</button> </td></tr>
