revert to jquery 1.10

--- a/edit.html
+++ b/edit.html
@@ -9,7 +9,7 @@
 
 	<script src="libs/leaflet-src.js"></script>
 	<script src="libs/leaflet.draw.js"></script>
-    <script src="libs/jquery.js"></script>
+        <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
 </head>
 <body>
 
