--- a/show.html
+++ b/show.html
@@ -9,7 +9,7 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="leaflet.draw.ie.css" /><![endif]-->
 
 	<script src="libs/leaflet-src.js"></script>
-    <script src="libs/jquery.js"></script>
+        <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
 </head>
 <body>
 
