--- a/edit.html
+++ b/edit.html
@@ -1,130 +1,138 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Tagmap edit</title> <meta charset="UTF-8">
+    <title>Tagmap edit</title> 
+        <meta charset="UTF-8"/>
+
 	<link rel="stylesheet" href="libs/leaflet.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="libs/leaflet.ie.css" /><![endif]-->
 	<link rel="stylesheet" href="leaflet.draw.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="leaflet.draw.ie.css" /><![endif]-->
-
+        <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
 	<script src="libs/leaflet-src.js"></script>
 	<script src="libs/leaflet.draw.js"></script>
-        <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
+        <script src="TagMap.js"></script>
 </head>
 <body>
-
-        <script>
-            //Receiving data
-            $.ajax({
-              url: 'http://www.politietsregisterblade.dk/api/1/?type=mapdata',
-              dataType: "jsonp",
-              success: function(data){createTagSelector(data);}}
-            );
-            //Getting the unique tags and ids
-            function createTagSelector(data){
-                //Removing the last line, which is the number of results
-                data.splice(data.length-1,1);
-                referenceTags = new Array();
-                $.each(data, function(index, value){
-                    //Splitting the tags by ";", which is used with multiple tags
-                    tags = value.tags.split(';');
-                    //Iterating through the tags for the data element
-                    $.each(tags, function(counter, item){
-                        //If tag is not recorded, add it to the reference arr
-                        if($.inArray(item, referenceTags) == -1){
-                            referenceTags.push(item);
-                        }
-                    });
-                });
-                createSelectList(referenceTags);
-            }
-            //Creates the select list using the created list of tags
-            function createSelectList(referenceTags){
-                var s = $("<select id=\"tagsQuery\" name=\"selectName\" />");
-                $.each(referenceTags, function(index, value){
-                    $("<option />", {value: value, text: value}).appendTo(s);
-                });
-                $("#divs").append(s);
-            }
-        </script>
     <table>
         <tr>
             <td>
-	             <div id="map" style="width: 500px; height: 500px; border: 1px solid #ccc"></div>
+            <div id="map" style="width: 500px; height: 500px; border: 1px solid #ccc"></div>
             </td>
             <td valign="top">
                 <table>
-                    <form name="mark" action="#">
-                        <tr><td>   filter:</td><td> <div id="divs">
-                                <button id="edit">s&oslash;g</button> </div>
-                                <button id="clear">Rens kort</button>
-                        </td></tr>
-             <tr><td>id:</td><td><input type="text" id="id"></td></tr>
-             <tr><td>navn:</td><td><input type="text" id="name"></td></tr>
-             <tr><td>tags:</td><td><input type="text" id="tags"> (krævet)</td></tr>
-             <tr><td>indhold (da):</td><td> <textarea id="content_da" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
-             <tr><td>indhold (en):</td><td> <textarea id="content_en" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
-             <tr><td>&nbsp;</td><td><button id="saveButton">Gem</button> <button id="remove">slet</button> </td></tr>
-             </form>
+                     <tr>
+                         <td> filter:</td>
+                          <td> 
+                              <div id="divs">
+                                   <button id="edit">søg</button> 
+                                   <button id="clear">Rens kort</button>
+                               </div>
+                          </td>
+                      </tr>
+                      <tr><td>id:</td><td><input type="text" id="id"/></td></tr>
+                      <tr><td>navn:</td><td><input type="text" id="name"/></td></tr>
+                      <tr><td>tags:</td><td><input type="text" id="tags"/> (krævet)</td></tr>
+                      <tr><td>indhold (da):</td><td> <textarea id="content_da" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
+                      <tr><td>indhold (en):</td><td> <textarea id="content_en" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
+                      <tr><td></td><td><button id="saveButton">Gem</button> <button id="remove">slet</button> </td></tr>
+                </table>
             </td>
         </tr>
     </table>
 
-    <script src="TagMap.js"></script>
-    <script type="text/javascript">
-    var tagmap = new TagMap({
-        api: "api.php", //PolleAPI
-        content: "content_da",
-        mapDiv: 'map',
-        infoDiv: 'info',
-        baseMaps: {
-            "Historisk atlas": new L.TileLayer('http://tile.historiskatlas.dk/54/{z}/{x}/{y}.jpg'),
-            "OSM": new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),
-            "cloudmade": new L.TileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png')
-        },
-        tagConfig : [
-        {
-            name: "mwp",
-            style: {
-                radius: 8,
-                fillColor: "#ffcc47",
-                color: "#ff0000",
-                weight: 5,
-                opacity: 1,
-                fillOpacity: 0.8
-            }
-        },
-        {
-            name: "test102",
-            style: {
-                radius: 8,
-                fillColor: "#cccc47",
-                color: "#ffff00",
-                weight: 5,
-                opacity: 0.5,
-                fillOpacity: 0.3
-            }
-         }
-       ],
-       lat: 55.63405,
-       lng: 12.59938,
-       zoom: 14
+<script type="text/javascript">
+function createTagSelector(data){
+    data.splice(data.length-1,1);
+    referenceTags = new Array();
+    $.each(data, function(index, value){
+	//Splitting the tags by ";", which is used with multiple tags
+	var tags = value.tags.split(";");
+	//Iterating through the tags for the data element
+	$.each(tags, function(counter, item){
+	    //If tag is not recorded, add it to the reference arr
+	    if($.inArray(item, referenceTags) == -1){
+		referenceTags.push(item);
+	    }
+	});
     });
+    createSelectList(referenceTags);
+ }
 
-     $('#tags').val("default");
-     tagmap.edit("default");
-     $('#edit').on('click', function () {
-        $('#id').val("");
-        $('#content_da').val("");
-        $('#content_en').val("");
-        $('#name').val("");
-        $('#tags').val($('#tagsQuery').val());
-        tagmap.edit($('#tagsQuery').val());
+//Creates the select list using the created list of tags
+function createSelectList(referenceTags){
+    var s = $("<select id=\"tagsQuery\" />");
+    $.each(referenceTags, function(index, value){
+	$("<option />", {value: value, text: value}).appendTo(s);
     });
-    $('#remove').on('click', function () { tagmap.remove(); });
-    $('#clear').on('click', function () { tagmap.clear(); });
-    </script>
+    $("#divs").append(s);
+}
 
+
+$(document).ready( function() {
+     //Receiving data
+     $.ajax({
+         url: 'http://www.politietsregisterblade.dk/api/1/?type=mapdata',
+         dataType: "jsonp",
+         success: function(data){
+             createTagSelector(data);
+
+	     var tagmap = new TagMap({
+		 api: "api.php", //PolleAPI
+		 content: "content_da",
+		 mapDiv: 'map',
+		 infoDiv: 'info',
+		 baseMaps: {
+		     "Historisk atlas": new L.TileLayer('http://tile.historiskatlas.dk/54/{z}/{x}/{y}.jpg'),
+		     "OSM": new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),
+		     "cloudmade": new L.TileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png')
+		 },
+		 tagConfig : [
+		 {
+		    name: "mwp",
+		    style: {
+			radius: 8,
+			fillColor: "#ffcc47",
+			color: "#ff0000",
+			weight: 5,
+			opacity: 1,
+			fillOpacity: 0.8
+		    }
+		},
+		{
+		    name: "test102",
+		    style: {
+			radius: 8,
+			fillColor: "#cccc47",
+			color: "#ffff00",
+			weight: 5,
+			opacity: 0.5,
+			fillOpacity: 0.3
+		    }
+		 }
+	       ],
+	       lat: 55.63405,
+	       lng: 12.59938,
+	       zoom: 14
+	    });
+
+	     $('#tags').val("default");
+	     tagmap.edit("default");
+	     $('#edit').on('click', function () {
+		$('#id').val("");
+		$('#content_da').val("");
+		$('#content_en').val("");
+		$('#name').val("");
+		$('#tags').val($('#tagsQuery').val());
+		tagmap.edit($('#tagsQuery').val());
+	    });
+	    $('#remove').on('click', function () { tagmap.remove(); });
+	    $('#clear').on('click', function () { tagmap.clear(); });
+
+       }
+   });
+});
+   </script>
 
 </body>
 </html>
