Removed the tag select list logic according to the new structure

--- a/edit.html
+++ b/edit.html
@@ -42,47 +42,14 @@
     </table>
 
 <script type="text/javascript">
-function createTagSelector(data){
-    data.splice(data.length-1,1);
-    referenceTags = new Array();
-    referenceTags.push("");
-    $.each(data, function(index, value){
-	//Splitting the tags by ";", which is used with multiple tags
-	var tags = value.tags.split(";");
-	//Iterating through the tags for the data element
-	$.each(tags, function(counter, item){
-	    //If tag is not recorded, add it to the reference arr
-	    if($.inArray(item, referenceTags) === -1){
-		referenceTags.push(item);
-	    }
-	});
-    });
-    createSelectList(referenceTags);
- }
-
-//Creates the select list using the created list of tags
-function createSelectList(referenceTags){
-    var s = $("<select id=\"tagsQuery\" />");
-    $.each(referenceTags, function(index, value){
-	$("<option />", {value: value, text: value}).appendTo(s);
-    });
-    $("#divs").append(s);
-}
-
 
 $(document).ready( function() {
-     //Receiving data
-     $.ajax({
-         url: 'http://www.politietsregisterblade.dk/api/1/?type=mapdata',
-         dataType: "jsonp",
-         success: function(data){
-             createTagSelector(data);
-
 	     var tagmap = new TagMap({
 		 api: "api.php", //PolleAPI
 		 content: "content_da",
 		 mapDiv: 'map',
 		 infoDiv: 'info',
+                 tagSelectorDiv: 'divs',
 		 baseMaps: {
 		     "Historisk atlas": new L.TileLayer('http://tile.historiskatlas.dk/54/{z}/{x}/{y}.jpg'),
 		     "OSM": new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),
@@ -116,8 +83,10 @@ $(document).ready( function() {
 	       lng: 12.59938,
 	       zoom: 14
 	    });
-
-	     $('#tags').val("default");
+            
+             tagmap.createTagSelector();
+	     
+             $('#tags').val("default");
 	     tagmap.edit("default");
 	     $('#edit').on('click', function () {
 		$('#id').val("");
@@ -136,10 +105,7 @@ $(document).ready( function() {
             $('#save').attr("disabled", true); 
 	    $('#remove').on('click', function () { tagmap.remove(); });
 	    $('#clear').on('click', function () { tagmap.clear(); });
-
-       }
-   });
-});
+	});
    </script>
 
 </body>
