Changed map size

--- a/show.html
+++ b/show.html
@@ -13,15 +13,18 @@
 </head>
 <body>
 
-    <table> <tr>
-            <td>
-                <div id="map" style="width: 500px; height: 500px; border: 1px solid #ccc"></div>
-            </td>
+    <table width="100%"> 
+        <tr>
             <td>
                 <div id="divs">
                      <button id="display">Søg</button> 
                      <button id="clear">Rens kort</button>
                  </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div id="map" style="height: 500px; border: 1px solid #ccc"></div>
                 <div id="info" style="width: 500px; height: 500px; border: 1px solid #ccc">
                 </div>
             </td>
