Changed the marker styling

--- a/show.html
+++ b/show.html
@@ -59,11 +59,11 @@
                 }
         },
         {
-            name: "mwp",
+            name: "jøde",
             style: {
                 radius: 8,
-                fillColor: "#aacc47",
-                color: "#aaaa00",
+                fillColor: "green",
+                color: "green",
                 weight: 5,
                 opacity: 1,
                 fillOpacity: 0.8
