--- a/show.html
+++ b/show.html
@@ -3,6 +3,7 @@
 <head>
 	<title>TagMap show</title>
 
+        <meta charset="UTF-8">
 	<link rel="stylesheet" href="libs/leaflet.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="libs/leaflet.ie.css" /><![endif]-->
 	<link rel="stylesheet" href="leaflet.draw.css" />
