Updated color codes for markers

--- a/show.html
+++ b/show.html
@@ -70,6 +70,28 @@
                 fillOpacity: 0.8
                 }
         },
+        {
+            name: "hjælper",
+            style: {
+                radius: 8,
+                fillColor: "blue",
+                color: "blue",
+                weight: 5,
+                opacity: 1,
+                fillOpacity: 0.8
+                }
+        },        
+        {
+            name: "socialtjeneste",
+            style: {
+                radius: 8,
+                fillColor: "yellow",
+                color: "yellow",
+                weight: 5,
+                opacity: 1,
+                fillOpacity: 0.8
+                }
+        },           
       ],
        lat: 55.67899,
        lng: 12.57522,
