Implemented JSONP instead of the api.php solution. Should also work on add and edit.

--- a/edit.html
+++ b/edit.html
@@ -45,7 +45,7 @@
 
 $(document).ready( function() {
 	     var tagmap = new TagMap({
-		 api: "api.php", //PolleAPI
+		 api: "http://www.politietsregisterblade.dk/api/",
 		 content: "content_da",
 		 mapDiv: 'map',
 		 infoDiv: 'info',
