Revert "Implemented JSONP instead of the api.php solution."
This reverts commit 68edb36e20ce77c7af09a7907a851af7a29ae83c.

--- a/edit.html
+++ b/edit.html
@@ -45,7 +45,7 @@
 
 $(document).ready( function() {
 	     var tagmap = new TagMap({
-		 api: "http://www.politietsregisterblade.dk/api/",
+		 api: "api.php", //PolleAPI
 		 content: "content_da",
 		 mapDiv: 'map',
 		 infoDiv: 'info',
