--- a/show.html
+++ b/show.html
@@ -41,6 +41,7 @@
         mapDiv: 'map',
         infoDiv: 'info',
         tagSelectorDiv: 'divs',
+        showLayerControls: true,
         baseMaps: {
            /* "Historisk atlas": new L.TileLayer('http://tile.historiskatlas.dk/54/{z}/{x}/{y}.jpg'),
             "OSM": new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),*/
