Updated link to map

--- a/show.html
+++ b/show.html
@@ -48,7 +48,7 @@
             "København 2013": new L.TileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png',{zIndex: 0})
         },
         overlayMaps: {
-            "København 1940": new L.TileLayer('http://195.181.144.34/kortdata/{z}/{x}/{y}.png',{ tms:true, zIndex:1 })                 
+            "København 1940": new L.TileLayer('http://www.politietsregisterblade.dk/kortdata/1/{z}/{x}/{y}.png',{ tms:true, zIndex:1 })
         },
         tagConfig : [
         {
