--- a/show.html
+++ b/show.html
@@ -42,6 +42,7 @@
         infoDiv: 'info',
         tagSelectorDiv: 'divs',
         showLayerControls: true,
+        enableMouseover: false;
         baseMaps: {
            /* "Historisk atlas": new L.TileLayer('http://tile.historiskatlas.dk/54/{z}/{x}/{y}.jpg'),
             "OSM": new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),*/
