indtroduce header_en #27

--- a/edit.html
+++ b/edit.html
@@ -31,7 +31,9 @@
                           </td>
                       </tr>
                       <tr><td>id:</td><td><input type="text" id="id"/></td></tr>
-                      <tr><td>navn:</td><td><input type="text" id="name"/></td></tr>
+                      <tr><td>navn (da):</td><td><input type="text" id="name"/></td></tr>
+
+                      <tr><td>navn (en):</td><td><input type="text" id="header_en"/></td></tr>
                       <tr><td>tags:</td><td><input type="text" id="tags"/> (krævet)</td></tr>
                       <tr><td>indhold (da):</td><td> <textarea id="content_da" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
                       <tr><td>indhold (en):</td><td> <textarea id="content_en" style="width: 400px; height: 100px; border: 1px solid #ccc"> </textarea></td></tr>
@@ -45,7 +47,7 @@
 
 $(document).ready( function() {
 	     var tagmap = new TagMap({
-		 api: "api.php", //PolleAPI
+		 api: "/1/index.php", 
 		 content: "content_da",
 		 mapDiv: 'map',
 		 infoDiv: 'info',
@@ -90,6 +92,7 @@ $(document).ready( function() {
 	     tagmap.edit("default");
 	     $('#edit').on('click', function () {
 		$('#id').val("");
+                $('#header_en').val("");
 		$('#content_da').val("");
 		$('#content_en').val("");
 		$('#name').val("");
@@ -99,6 +102,7 @@ $(document).ready( function() {
 
             $('#id').attr("disabled", true);
             $('#name').attr("disabled", true);
+            $('#header_en').attr("disabled", true);
             $('#content_da').attr("disabled", true);
             $('#content_en').attr("disabled", true);
             $('#remove').attr("disabled", true);
