#25 add taglink target to TagGroup if it is not present

--- a/show.html
+++ b/show.html
@@ -60,8 +60,8 @@
                 color: "#ff0000",
                 weight: 5,
                 opacity: 1,
-                fillOpacity: 0.8,
-                iconUrl: "images/leaf-green.png"
+                fillOpacity: 0.8//,
+               // iconUrl: "images/leaf-green.png"
                 }
         },
         {
@@ -72,8 +72,8 @@
                 color: "green",
                 weight: 5,
                 opacity: 1,
-                fillOpacity: 0.8,
-                iconUrl: "images/leaf-red.png"
+                fillOpacity: 0.8//,
+                //iconUrl: "images/leaf-red.png"
                 }
         },
         {
@@ -84,8 +84,8 @@
                 color: "blue",
                 weight: 5,
                 opacity: 1,
-                fillOpacity: 0.8,
-                iconUrl: "images/leaf-orange.png"
+                fillOpacity: 0.8//,
+              //  iconUrl: "images/leaf-orange.png"
                 }
         },        
         {
