grab leaflet from cdn via bower

--- a/show.html
+++ b/show.html
@@ -4,13 +4,11 @@
 	<title>TagMap show</title>
 
         <meta charset="UTF-8">
-	<link rel="stylesheet" href="libs/leaflet.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="libs/leaflet.ie.css" /><![endif]-->
-	<link rel="stylesheet" href="leaflet.draw.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="leaflet.draw.ie.css" /><![endif]-->
+	<link rel="stylesheet" href="bower_components/Leaflet/leaflet.css" />
+	<link rel="stylesheet" href="bower_components/Leaflet-draw/dist/leaflet.draw.css" />
 
-	<script src="libs/leaflet-src.js"></script>
-        <script src="http://code.jquery.com/jquery-1.10.0.js"></script>
+	<script src="bower_components/Leaflet/leaflet-src.js"></script>
+        <script src="bower_components/jquery/jquery.js"></script>
 </head>
 <body>
 
